Add more dimens and strings

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">CountriesApp2</string>
+    <string name="error_text">An Error occurred while loading data</string>
 </resources>
